syntax = "proto3";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Keepass.RPCClient";

package keepass;

service VaultEndpoint {
  rpc Add (AddVaultRequest) returns (GetVaultReply);
  rpc GetAll (google.protobuf.Empty) returns (GetAllVaultReply);
  rpc GetOne (GetOneVaultRequest) returns (GetVaultReply);
}

message AddVaultRequest {
  bytes ap_user_id = 1;
  string name = 2;
  google.protobuf.StringValue description = 3;
}

message GetOneVaultRequest {
  bytes id = 1;
}

message GetAllVaultReply {
  repeated GetVaultReply vaults = 1;
}

message GetVaultReply {
  bytes id = 1;
  bytes ap_user_id = 2;
  string name = 3;
  google.protobuf.StringValue description = 4;
}